--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,20 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dotted_border: ^2.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   fpdart: ^1.1.0
   get_it: ^7.7.0
+  image_picker: ^1.1.2
   supabase_flutter: ^2.6.0
+  uuid: ^4.5.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
